chore: sync local changes

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ ASR_MODEL=whisper-small
 EMBEDDINGS_MODEL=all-mpnet-base-v2
 SEARCH_ENDPOINT=http://opensearch:9200
 ADMIN_BOOTSTRAP_TOKEN=your_strong_token
+POLZA_API_BASE=https://api.polza.ai/api/v1
+POLZA_MODEL=openai/gpt-4o
+POLZA_API_KEY=ak_OzCRvB3lMR0EiWrD5xAw-CkaLYfff7h1jrKl5zLbVm0
