--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ ASR_MODEL=whisper-small
 EMBEDDINGS_MODEL=all-mpnet-base-v2
 SEARCH_ENDPOINT=http://opensearch:9200
 ADMIN_BOOTSTRAP_TOKEN=please_set_me
+POLZA_API_BASE=https://api.polza.ai/api/v1
+POLZA_API_KEY=
+# e.g. openai/gpt-4o or a Grok model id from Polza model list
+POLZA_MODEL=openai/gpt-4o
